# SPDP_P-step_Formulation

./: .gitignore  run_release_many.sh
SPDP_codes/: CMakeLists.txt  ReadData.py
SPDP_codes/include/: GenMultiGraph.h  PstepFormulation.h  ReadData.h
SPDP_codes_cpp/: CMakeLists.txt  CMakePresets.json
SPDP_codes_cpp/include/: GenMultiGraph.h  ReadData.h
SPDP_codes_cpp/src/: GenMultiGraph.cpp  ReadData.cpp  main.cpp  p-step formulation.cpp
SPDP_codes_python/: GenMultiGraph.py  ReadData.py  main.py
SPDP_output/: .~lock.RecDep_day_A5_p2_sol_exact.txt#  A0.txt  A0_multigraph_exact.txt  A0_p2_log.txt  A0_p2_sol_exact.txt  A1.txt  A1_p2_log.txt  A2_multigraph_exact.txt  A2_p2_log.txt  A2_p2_sol_exact.txt  A3.txt  A3_multigraph_exact.txt  A3_p2_log.txt  A3_p2_sol_exact.txt  RecDep_day_A1_p2_log.txt  RecDep_day_A1_p2_sol_exact.txt  RecDep_day_A2_p2_log.txt  RecDep_day_A2_p2_sol_exact.txt  RecDep_day_A3_p2_log.txt  RecDep_day_A3_p2_sol_exact.txt  RecDep_day_A4_p2_log.txt  RecDep_day_A4_p2_sol_exact.txt  RecDep_day_A5_p2_log.txt  RecDep_day_A5_p2_sol_exact.txt  RecDep_day_A6_p2_log.txt  RecDep_day_A6_p2_sol_exact.txt  RecDep_day_A7_p2_log.txt  RecDep_day_A7_p2_sol.txt  RecDep_day_A8_p2_log.txt  RecDep_day_A8_p2_sol.txt  RecDep_day_A9_p2_log.txt  RecDep_day_A9_p2_sol.txt
SPDP_solution/Fixed return best solution/: A1 Feasible.sol  A10 Feasible.sol  A11 Feasible.sol  A12 Feasible.sol  A13 Feasible.sol  A14 Feasible.sol  A15 Feasible.sol  A16 Feasible.sol  A17 Feasible.sol  A18 Feasible.sol  A19 Feasible.sol  A2 Feasible.sol  A20 Feasible.sol  A3 Feasible.sol  A4 Feasible.sol  A5 Feasible.sol  A6 Feasible.sol  A7 Feasible.sol  A8 Feasible.sol  A9 Feasible.sol  B1 Feasible.sol  B10 Feasible.sol  B11 Feasible.sol  B12 Feasible.sol  B13 Feasible.sol  B14 Feasible.sol  B15 Feasible.sol  B16 Feasible.sol  B17 Feasible.sol  B18 Feasible.sol  B19 Feasible.sol  B2 Feasible.sol  B20 Feasible.sol  B3 Feasible.sol  B4 Feasible.sol  B5 Feasible.sol  B6 Feasible.sol  B7 Feasible.sol  B8 Feasible.sol  B9 Feasible.sol  (+40 more)
SPDP_solution/Flexible return best solutions/: A1 Flex.sol  A10 Flex.sol  A11 Flex.sol  A12 Flex.sol  A13 Flex.sol  A14 Flex.sol  A15 Flex.sol  A16 Flex.sol  A17 Flex.sol  A18 Flex.sol  A19 Flex.sol  A2 Flex.sol  A20 Flex.sol  A3 Flex.sol  A4 Flex.sol  A5 Flex.sol  A6 Flex.sol  A7 Flex.sol  A8 Flex.sol  A9 Flex.sol  B1 Flex.sol  B10 Flex.sol  B11 Flex.sol  B12 Flex.sol  B13 Flex.sol  B14 Flex.sol  B15 Flex.sol  B16 Flex.sol  B17 Flex.sol  B18 Flex.sol  B19 Flex.sol  B2 Flex.sol  B20 Flex.sol  B3 Flex.sol  B4 Flex.sol  B5 Flex.sol  B6 Flex.sol  B7 Flex.sol  B8 Flex.sol  B9 Flex.sol  (+40 more)
